--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,99 @@
 h2{
     font-family: 'Rubik', sans-serif;
 } */
+
+
+main::after{
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    width: 80vw;
+    background: linear-gradient(-233deg, #000 40%, rgba(0, 0, 0, 0) 65%) no-repeat;
+}
+
+::-webkit-scrollbar{
+    width: 0px;
+    height: 0px;
+}
+
+main .personagem{
+    display: none;
+    height: 100vh;
+}
+
+main .personagem.selecionado{
+    display: block;
+}
+
+main .personagem .imagem{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.conteudo{
+    position: absolute;
+    top: 0px;
+    left: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+    max-width: 380px;
+    z-index: 1;
+}
+
+.conteudo .nome-personagem{
+    color: white;
+    font-size: 2.5em;
+    font-weight: 400;
+    font-family: 'Secular One', sans-serif;
+    margin-bottom: 20px;
+}
+
+.conteudo .descricao{
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.1em;
+    line-height: 24px;
+}
+
+.conteudo .logo{
+    background-image: url(../imagens/one-piece-logo.png);
+    height: 100px;
+    width: 230px;
+    margin-bottom: 35px;
+    background-size: cover;
+}
+
+.botoes{
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 180px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.botoes .botao{
+    border: none;
+    background: none;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.botoes .botao img{
+    border-radius: 50%;
+}
+
+.botoes .botao.selecionado{
+    transform: scale(1.2);
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.699);
+}
